--- a/weixin/pom.xml
+++ b/weixin/pom.xml
@@ -313,6 +313,12 @@
 	   		<artifactId>sqljdbc</artifactId>  
 	   		<version>1.0</version>  
 		</dependency> 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+		
     </dependencies>
 <!--     <distributionManagement>
         <snapshotRepository>
