--- a/weixin/pom.xml
+++ b/weixin/pom.xml
@@ -336,20 +336,21 @@
 		    <plugin>  
 		        <groupId>org.apache.maven.plugins</groupId>  
 		        <artifactId>maven-compiler-plugin</artifactId>  
-		        <version>2.3.2</version>  
+		        <version>3.1</version>  
 		        <configuration>  
 		            <source>1.7</source>  
 		            <target>1.7</target>  
+                    <encoding>UTF-8</encoding>  
 		        </configuration>  
 		    </plugin>  
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <webXml>web/WEB-INF/web.xml</webXml>
+                    <webXml>WEB-INF/web.xml</webXml>
                     <webResources>
                         <resource>
-                            <directory>web/WEB-INF</directory>
+                            <directory>WEB-INF</directory>
                             <filtering>true</filtering>
                             <targetPath>WEB-INF</targetPath>
                         </resource>
