--- a/weixin/src/main/resources/conf/jdbc.properties
+++ b/weixin/src/main/resources/conf/jdbc.properties
@@ -1,7 +1,7 @@
-jdbc_driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc_url=jdbc:sqlserver://192.168.0.198:1433; DatabaseName=ExportRebates
-jdbc_username=police
-jdbc_password=police123
+#jdbc_driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc_url=jdbc:sqlserver://192.168.0.198:1433; DatabaseName=ExportRebates
+#jdbc_username=police
+#jdbc_password=police123
 #jdbc_url=jdbc:sqlserver://127.0.0.1:1433; DatabaseName=ExportRebates
 #jdbc_username=sa
 #jdbc_password=inter123
@@ -10,7 +10,7 @@ jdbc_password=police123
 #jdbc_username=DSP_TEST2
 #jdbc_password=DSP_TEST2
 #validationQuery=SELECT 1 FROM DUAL
-#jdbc_driverClassName=com.mysql.jdbc.Driver
-#jdbc_url=jdbc:mysql://localhost:3306/sxykb?autoReconnect=true&amp;useunicode=true&amp;characterEncoding=utf8
-#jdbc_username=kbadmin
-#jdbc_password=admin
+jdbc_driverClassName=com.mysql.jdbc.Driver
+jdbc_url=jdbc:mysql://localhost:3306/test?autoReconnect=true&amp;useunicode=true&amp;characterEncoding=utf8
+jdbc_username=root
+jdbc_password=root
