--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,10 @@
 			<version>${spring.version}</version>
 			<exclusions>
 				<!-- Exclude Commons Logging in favor of SLF4j -->
-				<exclusion>
+				<!-- <exclusion>
 					<groupId>commons-logging</groupId>
 					<artifactId>commons-logging</artifactId>
-				</exclusion>
+				</exclusion> -->
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -379,7 +379,18 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
-
+		<!-- jcaptcha验证码 -->
+		<!-- <dependency>
+		    <groupId>com.octo.captcha</groupId>
+		    <artifactId>jcaptcha</artifactId>
+		    <version>1.0</version>
+		</dependency> -->
+		<!-- dubbo -->
+		<!-- <dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>dubbo</artifactId>
+		    <version>2.5.3</version>
+		</dependency> -->
 
 	</dependencies>
 	<!-- <distributionManagement> <snapshotRepository> <id>baemaven-snapshots</id> 
@@ -414,6 +425,28 @@
 					</webResources> -->
 				</configuration>
 			</plugin>
+				<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-shade-plugin</artifactId>
+		        <executions>
+		            <execution>
+		                <phase>package</phase>
+		                <goals>
+		                    <goal>shade</goal>
+		                </goals>
+		                <configuration>
+		                    <transformers>
+		                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+		                            <resource>META-INF/spring.handlers</resource>
+		                        </transformer>
+		                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+		                            <resource>META-INF/spring.schemas</resource>
+		                        </transformer>
+		                    </transformers>
+		                </configuration>
+		            </execution>
+		        </executions>
+		    </plugin>
 		</plugins>
 	</build>
 </project>
