--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -29,6 +29,6 @@ log4j.logger.java.sql.PreparedStatement=DEBUG
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.D.File = C\:/logs/log.log
 log4j.appender.D.Append = true
-log4j.appender.D.Threshold = INFO
+log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
