--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,38 +5,20 @@
     <param-name>webAppkey</param-name>
     <param-value>weixin.root</param-value>
   </context-param>
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>classpath:conf/log4j.properties</param-value>
-  </context-param>
   
-  <!--Spring默认刷新Log4j配置文件的间隔,单位为millisecond-->  
-  <context-param>  
-      <param-name>log4jRefreshInterval</param-name>  
-      <param-value>60000</param-value>  
-  </context-param> 
-      
-    <!--Spring log4j Config loader-->
-  <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:conf/spring.xml,classpath:conf/spring-mybatis.xml,classpath:conf/spring-scheduler.xml,classpath:conf/spring-cxf.xml,classpath:conf/spring-websocket.xml</param-value>
+    <param-value>
+        classpath:conf/spring.xml,
+        classpath:conf/spring-mybatis.xml,
+        classpath:conf/spring-scheduler.xml,
+        classpath:conf/spring-cxf.xml,
+        classpath:conf/spring-websocket.xml,
+        classpath:conf/spring-mvc-shiro.xml,
+        classpath:conf/spring-config-cache.xml,
+        classpath:conf/spring-config-shiro.xml
+    </param-value>
   </context-param>
-  <filter>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-   <!--  <async-supported>true</async-supported> -->
-  </filter>
-  <filter-mapping>
-    <filter-name>encodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
   <listener>
     <description>spring监听器</description>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -45,6 +27,51 @@
   <listener>
     <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
   </listener>
+  
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:conf/log4j.properties</param-value>
+  </context-param>
+  <!--Spring默认刷新Log4j配置文件的间隔,单位为millisecond-->  
+  <context-param>  
+      <param-name>log4jRefreshInterval</param-name>  
+      <param-value>60000</param-value>  
+  </context-param>  
+    <!--Spring log4j Config loader-->
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+  
+  <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <async-supported>true</async-supported>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <!-- shiro 安全过滤器 -->
+  <filter>
+      <filter-name>shiroFilter</filter-name>
+      <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+      <async-supported>true</async-supported>
+      <init-param>
+          <param-name>targetFilterLifecycle</param-name>
+          <param-value>true</param-value>
+      </init-param>
+  </filter>
+
+  <filter-mapping>
+      <filter-name>shiroFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+      <dispatcher>REQUEST</dispatcher>
+  </filter-mapping>
   <servlet>
     <description>spring mvc servlet</description>
     <servlet-name>springMvc</servlet-name>
