--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
 					<artifactId>jmxri</artifactId>
 				</exclusion>
 			</exclusions>
-			<scope>runtime</scope>
+			<!--<scope>runtime</scope>-->
 		</dependency>
 		<!-- log end -->
 
@@ -430,7 +430,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<encoding>UTF-8</encoding>
 					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
 					<!-- <webResources>
 						<resource>
